cluster/apps/security/vaultwarden/ingressroute-vaultwarden.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-route
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`vaultwarden.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: rfc1918
        # - name: basicauth
      services:
        - name: vaultwarden
          namespace: vaultwarden
          port: 80
    - match: Host(`vaultwarden.${SECRET_DOMAIN}`) && Path(`/notifications/hub`)
      kind: Rule
      services:
        - name: vaultwarden
          namespace: vaultwarden
          port: 3012
  # Use the secret generated by cert-manager
  tls:
    secretName: '${SECRET_DOMAIN/./-}-tls'
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
